# binance-server

./: Cargo.toml
binance-client/: Cargo.toml
binance-client/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs  rest.rs  websocket.rs
src/: main.rs
