[package]
name = "binance-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "./client" }
cli = { path = "./cli"}
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.1", features = ["derive"] }
rustyline = { version = "11.0.0"}
