[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
crypto-mac = "0.11.0"
